--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "globals": "^16.0.0",
     "postcss-import": "^16.1.0",
     "postcss-pxtorem": "^6.1.0",
+    "terser": "^5.43.1",
     "vite": "^6.3.5"
   }
 }
